Update styling on ProductItem to prevent visual shift of quanityButtons container on hover

--- a/client/src/components/product-page/product-item/product-item.module.scss
+++ b/client/src/components/product-page/product-item/product-item.module.scss
@@ -193,6 +193,7 @@
 
         .productQuantity {
           width: 50%;
+          margin-right: 1.5rem;
 
           .quantityIcon {
             color: $black;
@@ -292,6 +293,7 @@
 
         .productQuantity {
           width: 50%;
+          margin-right: 1.5rem;
 
           .quantityIcon {
             color: $black;
