--- a/client/src/pages/cart-page/cart-page.module.scss
+++ b/client/src/pages/cart-page/cart-page.module.scss
@@ -60,6 +60,7 @@
       height: 70%;
       display: flex;
       flex-direction: column;
+      overflow: hidden;
     }
 
     // CART TOTALS
